envoy-override.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        re2:
          max_program_size:
            error_level: 200
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                generate_request_id: true
                tracing:
                  provider:
                    name: envoy.tracers.opentelemetry
                    typed_config:
                      "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                      grpc_service:
                        envoy_grpc:
                          cluster_name: otel-collector
                route_config:
                  name: zylo-routes
                  virtual_hosts:
                    - name: services
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/auth"
                          route:
                            cluster: user-management
                            prefix_rewrite: "/api/auth"
                            timeout: 5s
                            retry_policy:
                              retry_on: "5xx,connect-failure,refused-stream"
                              num_retries: 3
                              per_try_timeout: 5s
                        - match:
                            safe_regex:
                              regex: "^/users/([0-9A-Z]{26})$"
                          route:
                            cluster: user-management
                            regex_rewrite:
                              pattern:
                                regex: "^/users/([0-9A-Z]{26})$"
                              substitution: "/api/users/\\1"
                            timeout: 5s
                            retry_policy:
                              retry_on: "5xx,connect-failure,refused-stream"
                              num_retries: 3
                              per_try_timeout: 5s
                        - match:
                            safe_regex:
                              regex: "^/users/([0-9A-Z]{26})/(likes|views)(/.*)?$"
                          route:
                            cluster: user-interaction
                            regex_rewrite:
                              pattern:
                                regex: "^/users/([0-9A-Z]{26})/(likes|views)(/.*)?$"
                              substitution: "/api/users/\\1/\\2\\3"
                            timeout: 5s
                            retry_policy:
                              retry_on: "5xx,connect-failure,refused-stream"
                              num_retries: 3
                              per_try_timeout: 5s
                        - match:
                            safe_regex:
                              regex: "^/posts/([0-9A-Z]{26})/replies(/.*)?$"
                          route:
                            cluster: user-interaction
                            regex_rewrite:
                              pattern:
                                regex: "^/posts/([0-9A-Z]{26})/replies(/.*)?$"
                              substitution: "/api/posts/\\1/replies\\2"
                            timeout: 5s
                            retry_policy:
                              retry_on: "5xx,connect-failure,refused-stream"
                              num_retries: 3
                              per_try_timeout: 5s
                        - match:
                            prefix: "/posts"
                          route:
                            cluster: media-service
                            prefix_rewrite: "/api/posts"
                            timeout: 5s
                            retry_policy:
                              retry_on: "5xx,connect-failure,refused-stream"
                              num_retries: 3
                              per_try_timeout: 5s
                        - match:
                            safe_regex:
                              regex: "^/users/([0-9A-Z]{26})/posts(/.*)?$"
                          route:
                            cluster: media-service
                            regex_rewrite:
                              pattern:
                                regex: "^/users/([0-9A-Z]{26})/posts(/.*)?$"
                              substitution: "/api/users/\\1/posts\\2"
                            timeout: 5s
                            retry_policy:
                              retry_on: "5xx,connect-failure,refused-stream"
                              num_retries: 3
                              per_try_timeout: 5s
                        - match:
                            safe_regex:
                              regex: "^/users/([0-9A-Z]{26})/(relationships|blocks|followers|friends)(/.*)?$"
                          route:
                            cluster: social-graph
                            regex_rewrite:
                              pattern:
                                regex: "^/users/([0-9A-Z]{26})/(relationships|blocks|followers|friends)(/.*)?$"
                              substitution: "/api/users/\\1/\\2\\3"
                            timeout: 5s
                            retry_policy:
                              retry_on: "5xx,connect-failure,refused-stream"
                              num_retries: 3
                              per_try_timeout: 5s
                        - match:
                            prefix: "/a"
                          route:
                            cluster: aggregator
                            prefix_rewrite: "/api"
                            timeout: 5s
                            retry_policy:
                              retry_on: "5xx,connect-failure,refused-stream"
                              num_retries: 3
                              per_try_timeout: 5s
                http_filters:
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: http_local_rate_limiter
                      token_bucket:
                        max_tokens: 100
                        tokens_per_fill: 50
                        fill_interval: 1s
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: otel-collector
      connect_timeout: 5s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: otel-collector
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: otel-collector
                      port_value: 4317

    - name: aggregator
      connect_timeout: 5.0s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 100
            max_pending_requests: 100
            max_requests: 100
            max_retries: 3
      outlier_detection:
        consecutive_5xx: 3
        interval: 10s
        base_ejection_time: 30s
        max_ejection_percent: 50
      load_assignment:
        cluster_name: aggregator
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: aggregator-service
                      port_value: 8080

    - name: user-interaction
      connect_timeout: 5.0s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 100
            max_pending_requests: 100
            max_requests: 100
            max_retries: 3
      outlier_detection:
        consecutive_5xx: 3
        interval: 10s
        base_ejection_time: 30s
        max_ejection_percent: 50
      load_assignment:
        cluster_name: user-interaction
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: user-interaction
                      port_value: 8080

    - name: media-service
      connect_timeout: 5.0s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN

      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 100
            max_pending_requests: 100
            max_requests: 100
            max_retries: 3
      outlier_detection:
        consecutive_5xx: 3
        interval: 10s
        base_ejection_time: 30s
        max_ejection_percent: 50
      load_assignment:
        cluster_name: media-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: media-service
                      port_value: 8080

    - name: social-graph
      connect_timeout: 5.0s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN

      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 100
            max_pending_requests: 100
            max_requests: 100
            max_retries: 3
      outlier_detection:
        consecutive_5xx: 3
        interval: 10s
        base_ejection_time: 30s
        max_ejection_percent: 50
      load_assignment:
        cluster_name: social-graph
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: social-graph
                      port_value: 8080

    - name: user-management
      connect_timeout: 5.0s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      circuit_breakers:
        thresholds:
          - priority: DEFAULT
            max_connections: 100
            max_pending_requests: 100
            max_requests: 100
            max_retries: 3
      outlier_detection:
        consecutive_5xx: 3
        interval: 10s
        base_ejection_time: 30s
        max_ejection_percent: 50
      load_assignment:
        cluster_name: user-management
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: user-management
                      port_value: 8080
